qt6/gen_qfiledevice.h

class QDateTime;
class QFileDevice;
class QMetaObject;
typedef struct QDateTime QDateTime;
typedef struct QFileDevice QFileDevice;
typedef struct QMetaObject QMetaObject;
QMetaObject* QFileDevice_metaObject(const QFileDevice* self);
void* QFileDevice_metacast(QFileDevice* self, const char* param1);
int QFileDevice_metacall(QFileDevice* self, int param1, int param2, void** param3);
struct miqt_string QFileDevice_tr(const char* s);
int QFileDevice_error(const QFileDevice* self);
void QFileDevice_unsetError(QFileDevice* self);
void QFileDevice_close(QFileDevice* self);
bool QFileDevice_isSequential(const QFileDevice* self);
int QFileDevice_handle(const QFileDevice* self);
struct miqt_string QFileDevice_fileName(const QFileDevice* self);
long long QFileDevice_pos(const QFileDevice* self);
bool QFileDevice_seek(QFileDevice* self, long long offset);
bool QFileDevice_atEnd(const QFileDevice* self);
bool QFileDevice_flush(QFileDevice* self);
long long QFileDevice_size(const QFileDevice* self);
bool QFileDevice_resize(QFileDevice* self, long long sz);
int QFileDevice_permissions(const QFileDevice* self);
bool QFileDevice_setPermissions(QFileDevice* self, int permissionSpec);
unsigned char* QFileDevice_map(QFileDevice* self, long long offset, long long size);
bool QFileDevice_unmap(QFileDevice* self, unsigned char* address);
QDateTime* QFileDevice_fileTime(const QFileDevice* self, int time);
bool QFileDevice_setFileTime(QFileDevice* self, QDateTime* newDate, int fileTime);
struct miqt_string QFileDevice_tr2(const char* s, const char* c);
struct miqt_string QFileDevice_tr3(const char* s, const char* c, int n);
unsigned char* QFileDevice_map3(QFileDevice* self, long long offset, long long size, int flags);
const QMetaObject* QFileDevice_staticMetaObject();
void QFileDevice_delete(QFileDevice* self);